--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,31 @@
-cmake_minimum_required(VERSION 3.10)
-project(heightmaprenderer VERSION 1.0.0 LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.15)
+project(heightmaprenderer VERSION 1.0.0 LANGUAGES CXX C)
 
-# 设置C++14标准
+# Set C++14 standard
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# 包含模块
+# Include modules
 include(GNUInstallDirs)
 include(CMakePackageConfigHelpers)
 
-# 选项
+# Add cmake module path
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+# Options
 option(HEIGHTMAP_BUILD_EXAMPLES "Build examples" ON)
 option(HEIGHTMAP_BUILD_SHARED_LIBS "Build shared libraries" ON)
 option(HEIGHTMAP_INSTALL_EXAMPLES "Install examples" OFF)
+option(HEIGHTMAP_WITH_BGFX "Build with BGFX support" ON)
+option(HEIGHTMAP_BUILD_BGFX_EXAMPLE "Build BGFX example" ON)
 
-# 设置输出目录
+# Set output directories
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-# 多配置生成器的输出目录
+# Multi-config generator output directories
 foreach(CONFIG ${CMAKE_CONFIGURATION_TYPES})
     string(TOUPPER ${CONFIG} CONFIG_UPPER)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG_UPPER} ${CMAKE_BINARY_DIR}/bin)
@@ -28,19 +33,46 @@ foreach(CONFIG ${CMAKE_CONFIGURATION_TYPES})
     set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG_UPPER} ${CMAKE_BINARY_DIR}/lib)
 endforeach()
 
-# 设置库类型
+# Add bgfx submodule
+if(HEIGHTMAP_WITH_BGFX)
+    # Check if submodule exists
+    if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/bgfx.cmake/CMakeLists.txt")
+        message(FATAL_ERROR 
+            "BGFX submodule not found. Please run:\n"
+            "git submodule update --init --recursive"
+        )
+    endif()
+
+    # Set bgfx options
+    set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+    set(BGFX_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
+    set(BGFX_INSTALL OFF CACHE BOOL "" FORCE)
+    set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "" FORCE)
+    
+    # Add bgfx subdirectory
+    add_subdirectory(external/bgfx.cmake EXCLUDE_FROM_ALL)
+    
+    # Set bgfx target as available
+    set(BGFX_AVAILABLE TRUE)
+    message(STATUS "BGFX enabled and configured")
+else()
+    set(BGFX_AVAILABLE FALSE)
+    message(STATUS "BGFX disabled")
+endif()
+
+# Set library type
 if(HEIGHTMAP_BUILD_SHARED_LIBS)
     set(LIBRARY_TYPE SHARED)
 else()
     set(LIBRARY_TYPE STATIC)
 endif()
 
-# 创建库目标
+# Create library target
 add_library(heightmaprenderer ${LIBRARY_TYPE}
     src/heightmap_renderer.cpp
 )
 
-# 设置目标属性
+# Set target properties
 set_target_properties(heightmaprenderer PROPERTIES
     VERSION ${PROJECT_VERSION}
     SOVERSION ${PROJECT_VERSION_MAJOR}
@@ -49,7 +81,7 @@ set_target_properties(heightmaprenderer PROPERTIES
     DEBUG_POSTFIX "_d"
 )
 
-# Windows特定设置
+# Windows specific settings
 if(WIN32)
     set_target_properties(heightmaprenderer PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
@@ -57,7 +89,7 @@ if(WIN32)
         ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     )
     
-    # 为多配置生成器设置
+    # Set for multi-config generators
     foreach(CONFIG ${CMAKE_CONFIGURATION_TYPES})
         string(TOUPPER ${CONFIG} CONFIG_UPPER)
         set_target_properties(heightmaprenderer PROPERTIES
@@ -68,7 +100,7 @@ if(WIN32)
     endforeach()
 endif()
 
-# 包含目录
+# Include directories
 target_include_directories(heightmaprenderer
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -77,7 +109,7 @@ target_include_directories(heightmaprenderer
         ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
-# 编译定义
+# Compile definitions
 if(HEIGHTMAP_BUILD_SHARED_LIBS)
     target_compile_definitions(heightmaprenderer
         PUBLIC HEIGHTMAP_SHARED_LIBS
@@ -85,7 +117,18 @@ if(HEIGHTMAP_BUILD_SHARED_LIBS)
     )
 endif()
 
-# 编译器特定设置
+# BGFX support - Use PRIVATE linking to avoid export issues
+if(BGFX_AVAILABLE)
+    target_compile_definitions(heightmaprenderer
+        PUBLIC HEIGHTMAP_WITH_BGFX
+    )
+    # Use PRIVATE instead of PUBLIC to avoid export issues
+    target_link_libraries(heightmaprenderer
+        PRIVATE bgfx bimg bx
+    )
+endif()
+
+# Compiler specific settings
 if(MSVC)
     target_compile_options(heightmaprenderer PRIVATE /W4)
     if(HEIGHTMAP_BUILD_SHARED_LIBS)
@@ -95,10 +138,10 @@ else()
     target_compile_options(heightmaprenderer PRIVATE -Wall -Wextra -Wpedantic)
 endif()
 
-# 创建别名目标
+# Create alias target
 add_library(heightmaprenderer::heightmaprenderer ALIAS heightmaprenderer)
 
-# 安装目标
+# Install targets - Only install our library, not BGFX dependencies
 install(TARGETS heightmaprenderer
     EXPORT heightmaprendererTargets
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
@@ -107,60 +150,69 @@ install(TARGETS heightmaprenderer
     INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
-# 安装头文件
+# Install header files
 install(DIRECTORY include/
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
     FILES_MATCHING PATTERN "*.h"
 )
 
-# 导出目标
+# Export targets - Only export our targets
 install(EXPORT heightmaprendererTargets
     FILE heightmaprendererTargets.cmake
     NAMESPACE heightmaprenderer::
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/heightmaprenderer
 )
 
-# 配置包配置文件
+# Configure package config file
 configure_package_config_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/heightmaprendererConfig.cmake.in
     ${CMAKE_CURRENT_BINARY_DIR}/heightmaprendererConfig.cmake
     INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/heightmaprenderer
 )
 
-# 版本配置文件
+# Version config file
 write_basic_package_version_file(
     ${CMAKE_CURRENT_BINARY_DIR}/heightmaprendererConfigVersion.cmake
     VERSION ${PROJECT_VERSION}
     COMPATIBILITY SameMajorVersion
 )
 
-# 安装配置文件
+# Install config files
 install(FILES
     ${CMAKE_CURRENT_BINARY_DIR}/heightmaprendererConfig.cmake
     ${CMAKE_CURRENT_BINARY_DIR}/heightmaprendererConfigVersion.cmake
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/heightmaprenderer
 )
 
-# 构建示例
+# Build examples
 if(HEIGHTMAP_BUILD_EXAMPLES)
     add_subdirectory(examples)
 endif()
 
-# 生成环境设置脚本
-if(WIN32)
-    configure_file(
-        ${CMAKE_CURRENT_SOURCE_DIR}/scripts/setup_environment.bat.in
-        ${CMAKE_BINARY_DIR}/setup_environment.bat
-        @ONLY
+# Generate run scripts after configuration
+if(HEIGHTMAP_BUILD_EXAMPLES)
+    # Set variables for script generation
+    set(BIN_DIR "${CMAKE_BINARY_DIR}/bin")
+    set(BUILD_BGFX_EXAMPLE ${HEIGHTMAP_BUILD_BGFX_EXAMPLE})
+    
+    # Execute script generation
+    execute_process(
+        COMMAND ${CMAKE_COMMAND}
+            -DBIN_DIR=${BIN_DIR}
+            -DBUILD_BGFX_EXAMPLE=${BUILD_BGFX_EXAMPLE}
+            -P ${CMAKE_CURRENT_SOURCE_DIR}/scripts/generate_run_scripts.cmake
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        ERROR_QUIET
     )
-else()
-    configure_file(
-        ${CMAKE_CURRENT_SOURCE_DIR}/scripts/setup_environment.sh.in
-        ${CMAKE_BINARY_DIR}/setup_environment.sh
-        @ONLY
-    )
-    # 设置执行权限
-    file(COPY ${CMAKE_BINARY_DIR}/setup_environment.sh
-         DESTINATION ${CMAKE_BINARY_DIR}
-         FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+endif()
+
+# Display configuration information
+message(STATUS "HeightmapRenderer Configuration:")
+message(STATUS "  Version: ${PROJECT_VERSION}")
+message(STATUS "  Build type: ${CMAKE_BUILD_TYPE}")
+message(STATUS "  Shared libs: ${HEIGHTMAP_BUILD_SHARED_LIBS}")
+message(STATUS "  Build examples: ${HEIGHTMAP_BUILD_EXAMPLES}")
+message(STATUS "  BGFX support: ${BGFX_AVAILABLE}")
+if(BGFX_AVAILABLE)
+    message(STATUS "  Build BGFX example: ${HEIGHTMAP_BUILD_BGFX_EXAMPLE}")
 endif()
