--- a/scripts/setup_environment.bat.in
+++ b/scripts/setup_environment.bat.in
@@ -1,15 +1,16 @@
 @echo off
-REM 设置HeightmapRenderer库的环境变量
+REM Setup environment for HeightmapRenderer library
 
 set HEIGHTMAP_ROOT=@CMAKE_BINARY_DIR@
 set PATH=%HEIGHTMAP_ROOT%\bin;%PATH%
 
-echo HeightmapRenderer环境已设置
-echo 库根目录: %HEIGHTMAP_ROOT%
+echo HeightmapRenderer environment has been set up
+echo Library root directory: %HEIGHTMAP_ROOT%
 echo.
-echo 现在可以运行示例程序：
+echo You can now run the example programs:
 echo   cd %HEIGHTMAP_ROOT%\bin
 echo   basic_example.exe
 echo.
-echo 或者使用运行脚本：
-echo   %HEIGHTMAP_ROOT%\bin\run_example.bat
+echo Or use the run scripts:
+echo   %HEIGHTMAP_ROOT%\bin\run_basic_example.bat
+echo   %HEIGHTMAP_ROOT%\bin\run_bgfx_example.bat (if built with BGFX)
